# cmake_demo

./: CMakeLists.txt  add.cpp  main.cpp
demo1_singlefile/: CMakeLists.txt  ReadME.md  add.cpp  add.h
demo2_multi_files/: CMakeLists.txt  main.cpp
demo2_multi_files/lib_math/: CMakeLists.txt  my_math.cpp  my_math.h
demo3/: CMakeLists.txt  main.cpp  test.bat
demo3/lib/: CMakeLists.txt
demo4_dll/: CMakeLists.txt
demo4_dll/app/: CMakeLists.txt  main.cpp
demo4_dll/lib/: CMakeLists.txt  hello.cpp  hello.h
demo5_dll/: CMakeLists.txt  main.cpp
demo5_dll/lib/: CMakeLists.txt  hello.cpp
